# company-pet

./: .gitignore  AGENTS.md  README.md  all_edits_dump.txt  app_css_view_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_306.css  app_css_view_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_35.css  app_css_view_12d163ea-518d-4922-a90e-d5f1401faf15_23.css  app_css_view_2b017e80-0cdb-4ab0-b41c-b261eeed73fc_19.css  app_final_lines.txt  assemble_final_css.py  build_clean_assembled_css.py  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_116.txt  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_116_formatted.css  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_116_untruncated.css  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_199.txt  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_227.txt  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_231.txt  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_328.txt  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_435.txt  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_461.txt  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_488.txt  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_490.txt  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_514.txt  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_538.txt  css_edit_0dafbcfb-5ae3-4ea5-82ab-911f34d336e2_564.txt  css_edit_12d163ea-518d-4922-a90e-d5f1401faf15_106.txt  css_edit_12d163ea-518d-4922-a90e-d5f1401faf15_112.txt  css_edit_12d163ea-518d-4922-a90e-d5f1401faf15_112_formatted.css  css_edit_12d163ea-518d-4922-a90e-d5f1401faf15_112_untruncated.css  css_edit_12d163ea-518d-4922-a90e-d5f1401faf15_133.txt  (+161 more)
src/: App.css  (+1 more)
电脑桌宠/src-tauri/: Cargo.toml  (+1 more)
(+172 files in other folders)
