[package]
name = "orange-cat-desktop-pet"
version = "0.1.0"
description = "Windows-first orange cat desktop pet"
authors = ["Annika"]
edition = "2021"

[lib]
name = "orange_cat_desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
